k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deployment
  namespace: #--
spec:
  replicas: #--
  selector:
    matchLabels:
      app: homepage-label
  template:
    metadata:
      labels:
        app: homepage-label
    spec:
      containers:
        - name: #--
          image: #--
