k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: #--
spec:
  type: ClusterIP
  selector:
    app: homepage-label
  ports:
    - protocol: TCP
      port: #--
      targetPort: #--
