k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: #--
spec:
  ingressClassName: nginx
  rules:
    - host: ivansanmartin.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: homepage-service
                port:
                  number: #--
